@@ -255,6 +255,9 @@ behaves like Kernel#`:
   cat #{__FILE__}
   HEREDOC
 
+When surrounding with quotes, any characters but that quote and newline
+can be used as the identifier.
+
 To call a method on a heredoc place it after the opening identifier:
 
   expected_result = <<-EXPECTED.chomp
